# olio-ohjelmointi

arvauspeli/: main.cpp
arvauspeli3/: main.cpp
game/: game.cpp  game.h  main.cpp
harjotustehtava1/: main.cpp
kotitehtava3/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
kotitehtava4/: asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
kotitehtava6/: mainwindow.cpp  mainwindow.h  mainwindow.ui
kotitehtava7_shakkikello/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tehtava0/: CMakeLists.txt  main.cpp
